; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_intel-iommu.c_dma_set_pte_pfn.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_intel-iommu.c_dma_set_pte_pfn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dma_pte = type { i32 }

@VTD_PAGE_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dma_pte*, i64)* @dma_set_pte_pfn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dma_set_pte_pfn(%struct.dma_pte* %0, i64 %1) #0 {
  %3 = alloca %struct.dma_pte*, align 8
  %4 = alloca i64, align 8
  store %struct.dma_pte* %0, %struct.dma_pte** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = trunc i64 %5 to i32
  %7 = load i32, i32* @VTD_PAGE_SHIFT, align 4
  %8 = shl i32 %6, %7
  %9 = load %struct.dma_pte*, %struct.dma_pte** %3, align 8
  %10 = getelementptr inbounds %struct.dma_pte, %struct.dma_pte* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = or i32 %11, %8
  store i32 %12, i32* %10, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
